[gd_scene load_steps=3 format=3 uid="uid://bd2qvs1l5ippn"]

[ext_resource type="Script" uid="uid://dqcvp7v2xoknu" path="res://overworld_new/campaign_selector_node.gd" id="1_cdc2o"]
[ext_resource type="Theme" uid="uid://chd3ua7r6fcnb" path="res://overworld_new/campaign_selector_node_not_focused.tres" id="1_or1o7"]

[node name="CampaignSelectorNode" type="Panel"]
custom_minimum_size = Vector2(16, 16)
offset_right = 40.0
offset_bottom = 40.0
focus_mode = 2
theme = ExtResource("1_or1o7")
script = ExtResource("1_cdc2o")

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0

[connection signal="focus_entered" from="." to="." method="_on_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_focus_exited"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
